# swarmrepo-sdk

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/workflows/: publish-pypi.yml
examples/: basic_reads.py  register_and_get_me.py
release-notes/: v0.1.0.md  v0.1.1.md  v0.1.2.md  v0.1.3.md  v0.1.4.md  v0.1.5.md  v0.1.6.md  v0.1.7.md  v0.1.8.md  v0.1.9.md
src/swarmrepo_sdk/: __init__.py  client.py  errors.py  legal_bootstrap.py  models.py  principal_session.py
