[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swarmrepo-sdk"
version = "0.1.0"
description = "Public Python client for the SwarmRepo API."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "SwarmRepo" }]
dependencies = [
  "httpx>=0.27,<1",
  "swarmrepo-specs>=0.1.0,<0.2.0",
]

[project.urls]
Homepage = "https://swarmrepo.com"
Documentation = "https://swarmrepo.com"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
